[tool.poetry]
name = "webtty-backend"
version = "0.1.0"
description = "WebTTy Backend Server"
authors = ["Barman <vbarman116@gmail.com>"]
readme = "README.md"
packages = [{include = "webtty_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
pyzmq = "^25.1.2"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
